--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@chakra-ui/react": "^2.4.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@next/font": "13.1.2",
+    "@next/font": "^13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
-    "framer-motion": "^8.4.2",
+    "framer-motion": "^6.5.1",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
   }
 }
