--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "^13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^6.5.1",
@@ -22,6 +23,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-retext": "^5.0.1",
+    "retext-english": "^4.1.0",
+    "retext-stringify": "^3.1.0",
+    "unified": "^10.1.2"
   }
 }
