--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
+    "eslint-config-next": "^14.1.0",
     "framer-motion": "^6.5.1",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "rehype-stringify": "^9.0.3",
