--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-STRAPI_BASE_URL=""
-NEXT_PUBLIC_STRAPI_BASE_URL=""
-NEXT_PUBLIC_STRAPI_BASE_API_URL=""
-REVALIDATE_SECRET=""
+STRAPI_BASE_URL="http://localhost:1337"
+NEXT_PUBLIC_STRAPI_BASE_URL="http://localhost:1337"
+NEXT_PUBLIC_STRAPI_BASE_API_URL="http://localhost:1337/api"
+REVALIDATE_SECRET="elbigans04"
